--- a/animationMappe/animation.html
+++ b/animationMappe/animation.html
@@ -35,7 +35,7 @@
     <header>
         <div class="logo">
             <a href="../indexMappe/index.html">
-                <img src="../imgs/logo.png" alt="Logo">
+                <img src="../imgs/logo/s0examLogo.svg" alt="Logo">
             </a>
         </div>
         <nav>
@@ -43,6 +43,7 @@
                 <li><a href="../introMappe/intro.html">Intro Uge</a></li>
                 <li><a href="../webMappe/web.html">Web</a></li>
                 <li><a href="../uxuiMappe/ux.html">UX/UI</a></li>
+                <li><a href="../animationMappe/animation.html">Animation</a></li>
                 <li><a href="../indholdMappe/indhold.html">Indhold</a></li>
                 <li><a href="../om_migMappe/om.html">Om mig</a></li>
             </ul>
@@ -60,45 +61,45 @@
     <script src="../menu.js"></script>
     <main>
         <div class="background_div">
-            <h2>Lorem ipsum</h2>
+            <h2>Intro</h2>
             <div>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati ab iusto, veritatis modi et
-                    voluptas? Veritatis corrupti suscipit, facilis alias dignissimos voluptate similique repellat
-                    expedita at quam eaque repellend</p>
+                <p>I dette tema skulle jeg lære at udvikle mit eget simple spil fra bunden ved hjælp af HTML, CSS og
+                    JavaScript. Man skulle designe
+                    alle grafiske elementer, herunder figurer, baggrunde og UI, i Adobe Illustrator. Selvom jeg kunne
+                    ikke færdiglave et produkt, lærte jeg en masse undervejs</p>
             </div>
             <div class="grid3_1-1">
                 <div id="backdropBox">
-                    <img src="../imgs/placehodler1.png" alt="figma pic">
+                    <img src="../imgs/animationImgs/setupone.webp" alt=" figma pic">
                 </div>
                 <div id="pBackdrop">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati ab iusto, veritatis modi et
-                        voluptas? Veritatis corrupti suscipit, facilis alias dignissimos voluptate similique repellat
-                        expedita at quam eaque repellend</p>
+                    <p>Jeg arbejdede med JavaScript og CSS animationer og lærte at animere forskellige spil-elementer,
+                        og skabte et
+                        dynamisk og engagerende
+                        gameplay.</p>
                 </div>
             </div>
             <div class="grid5_1-1">
                 <div>
-                    <img src="../imgs/placehodler1.png" alt="figma pic">
+                    <img src="../imgs/animationImgs/man1.webp" alt="figma pic">
                 </div>
 
                 <div>
-                    <img src="../imgs/placehodler1.png" alt="figma pic">
+                    <img src="../imgs/animationImgs/man2.webp" alt="figma pic">
                 </div>
             </div>
             <div>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati ab iusto, veritatis modi et
-                    voluptas? Veritatis corrupti suscipit, facilis alias dignissimos voluptate similique repellat
-                    expedita at quam eaque repellendus necessitatibus.
-                    Accusantium quaerat incidunt cum, numquam est obcaecati eveniet perspiciatis non facere. Cupiditate
+                <p>Med JavaScript skulle jeg programmere interaktioner i mit spil, såsom klikbare elementer,
+                    pointtællere, tab og
+                    vind-betingelser samt start/stop af animationer.
                 </p>
             </div>
-            <h2>lorem ipsum</h2>
+            <h2>Proces</h2>
 
             <div>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati ab iusto, veritatis modi et
-                    voluptas? Veritatis corrupti suscipit, facilis alias dignissimos voluptate similique repellat
-                    expedita at quam eaque repellendus necessitatibus.
-                    Accusantium quaerat incidunt cum, numquam est obcaecati eveniet perspiciatis non facere. Cupiditate
+                <p>Jeg lærte at man skulle bruge principper som det atmosfæriske perspektiv, rule of thirds og
+                    kontraster til at skabe et visuelt tiltalende
+                    spilunivers
                 </p>
             </div>
             <div class="carousel_layout">
@@ -109,9 +110,9 @@
                     <button class="arrow right-arrow" data-carousel-button="next">&#62;</button>
 
                     <ul data-slides>
-                        <li class="slide" data-active> <img src="../imgs/placehodler1.png" alt="Image 1"></li>
-                        <li class="slide"><img src="../imgs/logo.png" alt="Image 2"></li>
-                        <li class="slide"><img src="../imgs/placehodler1.png" alt="Image 3"></li>
+                        <li class="slide" data-active> <img src="../imgs/animationImgs/UML2.webp" alt="Image 1"></li>
+                        <li class="slide"><img src="../imgs/animationImgs/UMLone.webp" alt="Image 2"></li>
+                        <li class="slide"><img src="../imgs/animationImgs/uml3.webp" alt="Image 3"></li>
                     </ul>
 
 
@@ -120,70 +121,44 @@
             <script src="animation.js"></script>
 
             <div>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati ab iusto, veritatis modi et
-                    voluptas? Veritatis corrupti suscipit, facilis alias dignissimos voluptate similique repellat
-                    expedita at quam eaque repellendus necessitatibus.
-                    Accusantium quaerat incidunt cum, numquam est obcaecati eveniet perspiciatis non facere. Cupiditate
+                <p>Jeg prøvet udvikling af aktivitets- og state machine-diagrammer for at planlægge flowet og logikken i
+                    mit
+                    spil, hvilket hjalp mig
+                    med at strukturere koden systematisk."
                 </p>
             </div>
 
             <div class="grid1_1-2-1">
                 <div>
-                    <img src="../imgs/placehodler1.png" alt="figma pic">
+                    <img src="../imgs/animationImgs/upArrow.webp" alt="figma pic">
 
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati ab iusto, veritatis modi et
-                        voluptas? Veritatis corrupti suscipit, facilis alias dignissimos voluptate similique repellat
-                        expedita at quam eaque repellendus necessitatibus.
-                        Accusantium quaerat incidunt cum, numquam est obcaecati eveniet perspiciatis non facere.
-                        Cupiditate
+                    <p>Dokumentere design- og udviklingsprocesser gennem UML-diagrammer for at sikre en struktureret
+                        tilgang til projekterne.
+
                     </p>
                 </div>
 
                 <div>
-                    <img src="../imgs/placehodler1.png" alt="figma pic">
+                    <img src="../imgs/logo/s0examLogo.svg" alt="Logo">
 
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati ab iusto, veritatis modi et
-                        voluptas? Veritatis corrupti suscipit, facilis alias dignissimos voluptate similique repellat
-                        expedita at quam eaque repellendus necessitatibus.
-                        Accusantium quaerat incidunt cum, numquam est obcaecati eveniet perspiciatis non facere.
-                        Cupiditate
+                    <p>Spillet skulle blive testet af medstuderende under en intern fernisering, hvor man modtog
+                        værdifuld feedback, som man brugte til
+                        at finjustere sine design og funktionalitet.
                     </p>
                 </div>
 
                 <div>
-                    <img src="../imgs/placehodler1.png" alt="figma pic">
+                    <img src="../imgs/logo/s0examLogo.svg" alt="Logo">
 
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati ab iusto, veritatis modi et
-                        voluptas? Veritatis corrupti suscipit, facilis alias dignissimos voluptate similique repellat
-                        expedita at quam eaque repellendus necessitatibus.
-                        Accusantium quaerat incidunt cum, numquam est obcaecati eveniet perspiciatis non facere.
-                        Cupiditate
-                    </p>
+                    <p>Temaet skulle i sidste ende kulminere i et fuldt funktionelt spil på et website, som
+                        demonstrerede ens færdigheder i både programmering og
+                        design."</p>
                 </div>
             </div>
 
         </div>
 
-        <div class="background_div2">
-            <h2>Lorem ipsum</h2>
-            <div>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati ab iusto, veritatis modi et
-                    voluptas? Veritatis corrupti suscipit, facilis alias dignissimos voluptate similique repellat
-                    expedita at quam eaque repellend</p>
-            </div>
 
-            <div class="grid4_1-1">
-                <div id="endDivpic">
-                    <img src="../imgs/placehodler1.png" alt="pic1">
-                </div>
-
-                <div id="endDivtxt">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati ab iusto, veritatis modi et
-                        voluptas? Veritatis corrupti suscipit, facilis alias dignissimos voluptate similique repellat
-                        expedita at quam eaque repellend</p>
-                </div>
-            </div>
-        </div>
     </main>
 
     <footer>
@@ -192,16 +167,20 @@
                 <img src="../imgs/logo/s0examLogo.svg" alt="Logo">
             </div>
             <div>
-                <h2>Lorem ipsum</h2>
+                <h2>Solomon Mwesigwa Portfolio</h2>
 
-                <p>orem ipsum dolor sit amet consectetur adipisicing elit. Est temporibus</p>
+                <p>Contact us: Solo@mywebsite.comm| Follow us: Solo@mywebsite</p>
+                <p>© 2025 My Website Name. All rights reserved. | Terms of Service</p>
 
-                <p>dolor voluptatibus fugiat consequatur dignissimos</p>
+
             </div>
             <div>
-                <p>Instagram</p>
+                <p>Instagram:</p>
+                <a
+                    href="https://da.wikipedia.org/wiki/K%C3%B8benhavns_Erhvervsakademi#:~:text=KEA%20er%20en%20fusion%20af,600%20ansatte%20p%C3%A5%20KEA.">Insta</a>
 
-                <p>tiktok</p>
+                <p>tiktok:</p>
+                <a href="https://kea.dk/">Tiktok</a>
             </div>
         </div>
     </footer>
