--- a/uxuiMappe/ux.html
+++ b/uxuiMappe/ux.html
@@ -35,7 +35,7 @@
     <header>
         <div class="logo">
             <a href="../indexMappe/index.html">
-                <img src="../imgs/logo.png" alt="Logo">
+                <img src="../imgs/logo/s0examLogo.svg" alt="Logo">
             </a>
         </div>
         <nav>
@@ -43,6 +43,7 @@
                 <li><a href="../introMappe/intro.html">Intro Uge</a></li>
                 <li><a href="../webMappe/web.html">Web</a></li>
                 <li><a href="../uxuiMappe/ux.html">UX/UI</a></li>
+                <li><a href="../animationMappe/animation.html">Animation</a></li>
                 <li><a href="../indholdMappe/indhold.html">Indhold</a></li>
                 <li><a href="../om_migMappe/om.html">Om mig</a></li>
             </ul>
@@ -60,68 +61,62 @@
     <script src="../menu.js"></script>
     <main>
         <div class="background_div">
-            <h2>Lorem ipsum</h2>
+            <h2>Intro</h2>
             <div>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati ab iusto, veritatis modi et
-                    voluptas? Veritatis corrupti suscipit, facilis alias dignissimos voluptate similique repellat
-                    expedita at quam eaque repellend</p>
+                <p>Dette tema fokuserede på at forstå kerneprincipperne for brugeroplevelse (UX) og brugergrænseflade
+                    (UI) design. Jeg
+                    udforskede forholdet mellem brugere og digitale grænseflader, med vægt på forskning, prototyping og
+                    test</p>
             </div>
             <div class="grid3_1-1">
                 <div id="backdropBox">
-                    <img src="../imgs/placehodler1.png" alt="figma pic">
+                    <img src="../imgs/uxuiImgs/survey.webp" alt="figma pic">
                 </div>
                 <div id="pBackdrop">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati ab iusto, veritatis modi et
-                        voluptas? Veritatis corrupti suscipit, facilis alias dignissimos voluptate similique repellat
-                        expedita at quam eaque repellend</p>
+                    <p>Ved at bruge iterative designmetoder arbejdede jeg med at skabe wireframes, mockups og prototyper
+                        i Figma, itererede
+                        baseret på brugerfeedback og indsigt fra usability-tests.</p>
                 </div>
             </div>
 
             <div>
-                <img src="../imgs/placehodler1.png" alt="figma pic">
+                <img src="../imgs/uxuiImgs/lowfiwirefrapic.webp" alt="figma pic">
             </div>
 
             <div>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati ab iusto, veritatis modi et
-                    voluptas? Veritatis corrupti suscipit, facilis alias dignissimos voluptate similique repellat
-                    expedita at quam eaque repellendus necessitatibus.
-                    Accusantium quaerat incidunt cum, numquam est obcaecati eveniet perspiciatis non facere. Cupiditate
+                <p>Jeg gennemførte usability-tests, herunder tænk højt og 5-sekunders test, for at indsamle
+                    brugerindsigt. Disse resultater
+                    formede det endelige design og sikrede, at det opfyldte brugernes behov
                 </p>
             </div>
 
-            <h2>lorem ipsum</h2>
+            <h2>Proces</h2>
 
             <div class="grid1_1-2-1">
                 <div>
-                    <img src="../imgs/placehodler1.png" alt="figma pic">
+                    <img src="../imgs/uxuiImgs/hifiprototypepic.webp" alt="figma pic">
 
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati ab iusto, veritatis modi et
-                        voluptas? Veritatis corrupti suscipit, facilis alias dignissimos voluptate similique repellat
-                        expedita at quam eaque repellendus necessitatibus.
-                        Accusantium quaerat incidunt cum, numquam est obcaecati eveniet perspiciatis non facere.
-                        Cupiditate
+                    <p>Jeg indsamlede, forfinede og optimeret indhold, inklusive tekst og billeder, for at sikre, at de
+                        var i overensstemmelse
+                        med UX/UI-konventioner og bæredygtige designprincipper.
                     </p>
                 </div>
 
                 <div>
-                    <img src="../imgs/placehodler1.png" alt="figma pic">
+                    <img src="../imgs/uxuiImgs/structurUx.webp" alt="figma pic">
 
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati ab iusto, veritatis modi et
-                        voluptas? Veritatis corrupti suscipit, facilis alias dignissimos voluptate similique repellat
-                        expedita at quam eaque repellendus necessitatibus.
-                        Accusantium quaerat incidunt cum, numquam est obcaecati eveniet perspiciatis non facere.
-                        Cupiditate
+                    <p>Gennem hele temaet dokumenterede jeg min UX/UI-proces, og præsenterede min forskning,
+                        designbeslutninger og endelige
+                        løsninger på en struktureret måde
                     </p>
                 </div>
 
                 <div>
-                    <img src="../imgs/placehodler1.png" alt="figma pic">
+                    <img src="../imgs/uxuiImgs/moodBoarux.webp" alt="figma pic">
 
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati ab iusto, veritatis modi et
-                        voluptas? Veritatis corrupti suscipit, facilis alias dignissimos voluptate similique repellat
-                        expedita at quam eaque repellendus necessitatibus.
-                        Accusantium quaerat incidunt cum, numquam est obcaecati eveniet perspiciatis non facere.
-                        Cupiditate
+                    <p>Figma var centralt i min arbejdsgang, fra at skabe moodboards og stilfliser til at designe
+                        responsive prototyper til
+                        test og udvikling
                     </p>
                 </div>
             </div>
@@ -129,22 +124,22 @@
         </div>
 
         <div class="background_div2">
-            <h2>Lorem ipsum</h2>
+            <h2>Produkt</h2>
             <div>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati ab iusto, veritatis modi et
-                    voluptas? Veritatis corrupti suscipit, facilis alias dignissimos voluptate similique repellat
-                    expedita at quam eaque repellend</p>
+                <p>Vi afsluttede temaet med et emnesite, hvis slutprodukt var et produkt af idégenerering, planlægning
+                    og endeløse tests</p>
             </div>
 
             <div class="grid4_1-1">
                 <div id="endDivpic">
-                    <img src="../imgs/placehodler1.png" alt="pic1">
+                    <img src="../imgs/uxuiImgs/emnesite.webp" alt="pic1">
+                    <a href="https://solomonmade.dk/kea/03_ux/emneSite/mangaMeals/">Emnesite</a>
                 </div>
 
                 <div id="endDivtxt">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati ab iusto, veritatis modi et
-                        voluptas? Veritatis corrupti suscipit, facilis alias dignissimos voluptate similique repellat
-                        expedita at quam eaque repellend</p>
+                    <p>Jeg har desuden fået en dybere forståelse af multimediedesignerens rolle, som kræver en
+                        kombination af tekniske
+                        færdigheder, kreative løsninger og evnen til at kommunikere og samarbejde med andre.</p>
                 </div>
             </div>
         </div>
@@ -156,16 +151,20 @@
                 <img src="../imgs/logo/s0examLogo.svg" alt="Logo">
             </div>
             <div>
-                <h2>Lorem ipsum</h2>
+                <h2>Solomon Mwesigwa Portfolio</h2>
 
-                <p>orem ipsum dolor sit amet consectetur adipisicing elit. Est temporibus</p>
+                <p>Contact us: Solo@mywebsite.comm| Follow us: Solo@mywebsite</p>
+                <p>© 2025 My Website Name. All rights reserved. | Terms of Service</p>
 
-                <p>dolor voluptatibus fugiat consequatur dignissimos</p>
+
             </div>
             <div>
-                <p>Instagram</p>
+                <p>Instagram:</p>
+                <a
+                    href="https://da.wikipedia.org/wiki/K%C3%B8benhavns_Erhvervsakademi#:~:text=KEA%20er%20en%20fusion%20af,600%20ansatte%20p%C3%A5%20KEA.">Insta</a>
 
-                <p>tiktok</p>
+                <p>tiktok:</p>
+                <a href="https://kea.dk/">Tiktok</a>
             </div>
         </div>
     </footer>
