--- a/webMappe/web.html
+++ b/webMappe/web.html
@@ -35,7 +35,7 @@
     <header>
         <div class="logo">
             <a href="../indexMappe/index.html">
-                <img src="../imgs/logo.png" alt="Logo">
+                <img src="../imgs/logo/s0examLogo.svg" alt="Logo">
             </a>
         </div>
         <nav>
@@ -43,6 +43,7 @@
                 <li><a href="../introMappe/intro.html">Intro Uge</a></li>
                 <li><a href="../webMappe/web.html">Web</a></li>
                 <li><a href="../uxuiMappe/ux.html">UX/UI</a></li>
+                <li><a href="../animationMappe/animation.html">Animation</a></li>
                 <li><a href="../indholdMappe/indhold.html">Indhold</a></li>
                 <li><a href="../om_migMappe/om.html">Om mig</a></li>
             </ul>
@@ -60,71 +61,64 @@
     <script src="../menu.js"></script>
     <main>
         <div class="background_div">
-            <h2>Lorem ipsum</h2>
+            <h2>Intro</h2>
             <div>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati ab iusto, veritatis modi et
-                    voluptas? Veritatis corrupti suscipit, facilis alias dignissimos voluptate similique repellat
-                    expedita at quam eaque repellend</p>
+                <p>Dette projekt markerede begyndelsen på min webdesignrejse, hvor jeg lavede en responsiv hjemmeside
+                    ved hjælp af HTML og
+                    CSS. Jeg lærte om semantisk markup, genbrug af kode og hvordan man organiserer filer effektivt.</p>
             </div>
             <div class="grid3_1-1">
                 <div id="backdropBox">
-                    <img src="../imgs/placehodler1.png" alt="figma pic">
+                    <img src="../imgs/webImgs/fileweb.webp" alt="figma pic">
                 </div>
                 <div id="pBackdrop">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati ab iusto, veritatis modi et
-                        voluptas? Veritatis corrupti suscipit, facilis alias dignissimos voluptate similique repellat
-                        expedita at quam eaque repellend</p>
+                    <p>Under dette tema udforskede jeg værktøjer som Figma til wireframing og mockup-oprettelse, med
+                        fokus på designprincipper
+                        såsom gestaltprincipper og typografiopsætning.</p>
                 </div>
             </div>
             <div class="grid5_1-1">
                 <div>
-                    <img src="../imgs/placehodler1.png" alt="figma pic">
+                    <img src="../imgs/webImgs/mediaqury.webp" alt="figma pic">
                 </div>
 
                 <div>
-                    <img src="../imgs/placehodler1.png" alt="figma pic">
+                    <img src="../imgs/webImgs/gridpic.webp" alt="figma pic">
                 </div>
             </div>
             <div>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati ab iusto, veritatis modi et
-                    voluptas? Veritatis corrupti suscipit, facilis alias dignissimos voluptate similique repellat
-                    expedita at quam eaque repellendus necessitatibus.
-                    Accusantium quaerat incidunt cum, numquam est obcaecati eveniet perspiciatis non facere. Cupiditate
+                <p>Jeg anvendte en 'mobil-first'-tilgang ved at bruge CSS Grid, Flexbox og mediaqueries for at
+                    sikre, at min
+                    hjemmeside tilpasser sig problemfrit til forskellige enheder.
                 </p>
             </div>
-            <h2>lorem ipsum</h2>
+            <h2>Proces</h2>
 
             <div class="grid1_1-2-1">
                 <div>
-                    <img src="../imgs/placehodler1.png" alt="figma pic">
+                    <img src="../imgs/webImgs/psPic.webp" alt="figma pic">
 
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati ab iusto, veritatis modi et
-                        voluptas? Veritatis corrupti suscipit, facilis alias dignissimos voluptate similique repellat
-                        expedita at quam eaque repellendus necessitatibus.
-                        Accusantium quaerat incidunt cum, numquam est obcaecati eveniet perspiciatis non facere.
-                        Cupiditate
+                    <p>Jeg arbejdede med at forberede webklare billeder i Photoshop og udforskede formater som PNG, JPG
+                        og SVG for at optimere
+                        ydeevnen og samtidig bevare kvaliteten.
                     </p>
                 </div>
 
                 <div>
-                    <img src="../imgs/placehodler1.png" alt="figma pic">
+                    <img src="../imgs/webImgs/browserinspect.webp" alt="figma pic">
 
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati ab iusto, veritatis modi et
-                        voluptas? Veritatis corrupti suscipit, facilis alias dignissimos voluptate similique repellat
-                        expedita at quam eaque repellendus necessitatibus.
-                        Accusantium quaerat incidunt cum, numquam est obcaecati eveniet perspiciatis non facere.
-                        Cupiditate
+                    <p>Værktøjer som Visual Studio Code, FileZilla og browser-inspectorværktøjer var afgørende for
+                        kodning
+                        og implementering af
+                        webstedet.
                     </p>
                 </div>
 
                 <div>
-                    <img src="../imgs/placehodler1.png" alt="figma pic">
+                    <img src="../imgs/webImgs/squoosh.webp" alt="figma pic">
 
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati ab iusto, veritatis modi et
-                        voluptas? Veritatis corrupti suscipit, facilis alias dignissimos voluptate similique repellat
-                        expedita at quam eaque repellendus necessitatibus.
-                        Accusantium quaerat incidunt cum, numquam est obcaecati eveniet perspiciatis non facere.
-                        Cupiditate
+                    <p>Jeg har også arbejdet med filformater som JPEG, PNG og SVG, og hvordan de bedst anvendes
+                        afhængigt af projektets behov.
                     </p>
                 </div>
             </div>
@@ -132,22 +126,21 @@
         </div>
 
         <div class="background_div2">
-            <h2>Lorem ipsum</h2>
+            <h2>Produkt</h2>
             <div>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati ab iusto, veritatis modi et
-                    voluptas? Veritatis corrupti suscipit, facilis alias dignissimos voluptate similique repellat
-                    expedita at quam eaque repellend</p>
+                <p>Det afsluttende projekt i dette tema var Studiestartsprøven, et responsivt mobilsite, der viste alle
+                    de færdigheder, jeg
+                    havde udviklet i løbet af de første par uger</p>
             </div>
 
             <div class="grid4_1-1">
                 <div id="endDivpic">
-                    <img src="../imgs/placehodler1.png" alt="pic1">
+                    <img src="../imgs/webImgs/mobilsitepiCC.webp" alt="pic1">
+                    <a href="https://solomonmade.dk/kea/02_web/01_website/mobilsite/">mobilsite</a>
                 </div>
 
                 <div id="endDivtxt">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati ab iusto, veritatis modi et
-                        voluptas? Veritatis corrupti suscipit, facilis alias dignissimos voluptate similique repellat
-                        expedita at quam eaque repellend</p>
+                    <p>Derudover har jeg fået erfaring med domæneopsætning og forstået vigtigheden af Copyright.</p>
                 </div>
             </div>
         </div>
@@ -159,16 +152,20 @@
                 <img src="../imgs/logo/s0examLogo.svg" alt="Logo">
             </div>
             <div>
-                <h2>Lorem ipsum</h2>
+                <h2>Solomon Mwesigwa Portfolio</h2>
 
-                <p>orem ipsum dolor sit amet consectetur adipisicing elit. Est temporibus</p>
+                <p>Contact us: Solo@mywebsite.comm| Follow us: Solo@mywebsite</p>
+                <p>© 2025 My Website Name. All rights reserved. | Terms of Service</p>
 
-                <p>dolor voluptatibus fugiat consequatur dignissimos</p>
+
             </div>
             <div>
-                <p>Instagram</p>
+                <p>Instagram:</p>
+                <a
+                    href="https://da.wikipedia.org/wiki/K%C3%B8benhavns_Erhvervsakademi#:~:text=KEA%20er%20en%20fusion%20af,600%20ansatte%20p%C3%A5%20KEA.">Insta</a>
 
-                <p>tiktok</p>
+                <p>tiktok:</p>
+                <a href="https://kea.dk/">Tiktok</a>
             </div>
         </div>
     </footer>
