--- a/indholdMappe/indhold.html
+++ b/indholdMappe/indhold.html
@@ -26,9 +26,9 @@
     <link rel="stylesheet" href="../general_css/style.css">
     <link rel="stylesheet" href="../general_css/menu.css">
     <link rel="stylesheet" href="../general_css/footer.css">
-    <link rel="stylesheet" href="intro_layout.css">
-    <link rel="stylesheet" href="intro_style.css">
-    <title>Intro uge</title>
+    <link rel="stylesheet" href="indhold_layout.css">
+    <link rel="stylesheet" href="indhold_style.css">
+    <title>Inhold</title>
 </head>
 
 <body>
@@ -43,6 +43,7 @@
                 <li><a href="../introMappe/intro.html">Intro Uge</a></li>
                 <li><a href="../webMappe/web.html">Web</a></li>
                 <li><a href="../uxuiMappe/ux.html">UX/UI</a></li>
+                <li><a href="../animationMappe/animation.html">Animation</a></li>
                 <li><a href="../indholdMappe/indhold.html">Indhold</a></li>
                 <li><a href="../om_migMappe/om.html">Om mig</a></li>
             </ul>
@@ -156,16 +157,20 @@
                 <img src="../imgs/logo/s0examLogo.svg" alt="Logo">
             </div>
             <div>
-                <h2>Lorem ipsum</h2>
+                <h2>Solomon Mwesigwa Portfolio</h2>
 
-                <p>orem ipsum dolor sit amet consectetur adipisicing elit. Est temporibus</p>
+                <p>Contact us: Solo@mywebsite.comm| Follow us: Solo@mywebsite</p>
+                <p>© 2025 My Website Name. All rights reserved. | Terms of Service</p>
 
-                <p>dolor voluptatibus fugiat consequatur dignissimos</p>
+
             </div>
             <div>
-                <p>Instagram</p>
+                <p>Instagram:</p>
+                <a
+                    href="https://da.wikipedia.org/wiki/K%C3%B8benhavns_Erhvervsakademi#:~:text=KEA%20er%20en%20fusion%20af,600%20ansatte%20p%C3%A5%20KEA.">Insta</a>
 
-                <p>tiktok</p>
+                <p>tiktok:</p>
+                <a href="https://kea.dk/">Tiktok</a>
             </div>
         </div>
     </footer>
